Added stylesheet file and modifed index.html and script.js file.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Windows meme of today</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Windows meme of today</h1>
